rock/tests/compile_fail/repeated_section.ra
block:
    idle;
.sec:
    add C;
.sec:
    add D;